Error: No devolvia la lista de modulos de manera correcta; Solucion: Utilice el metodo collect de Stream para realizar bien la operacion